<resources>
    <string name="app_name">Agrari</string>
    <string name="welcomeText">Bienvenido a Agrari</string>
    <string name="welcomeDescription">El lugar donde puedes encontrar el terreno ideal para tu cultivo.</string>
    <string name="loginButtonText">Iniciar Sesión</string>
    <string name="DoNotHaveAccountText">Aún no tengo una cuenta</string>
    <string name="RegisterText"><u>Registrarme</u></string>
    <string name="LoginText">Iniciar Sesión</string>
    <string name="EmailText">Email</string>
    <string name="PasswordText">Contraseña</string>
    <string name="ContinueButtonText">Continuar</string>
    <string name="ForgotPasswordText">Olvidé mi contraseña</string>
    <string name="RecoverPasswordText"><u>Recuperar</u></string>
    <string name="SignUpText">Registrarme</string>
    <string name="TermsConditionsCheckBoxText">He leído y acepto los términos y condiciones de uso</string>
    <string name="RecoverPasswordTitleText">Recuperar Contraseña</string>
    <string name="RecoverPasswordSubTitleText">Te enviaremos un correo para que puedas cambiar tu contraseña.</string>
    <string name="SendEmailButtonText">Enviar Correo</string>
    <string name="ChooseUserTypeText">¿Qué quieres ser?</string>
    <string name="SellerText">Vendedor</string>
    <string name="BuyerText">Comprador</string>
    <string name="AboutUserText">Sobre ti</string>
    <string name="UserNameText">Nombre</string>
    <string name="LastNameText">Apellido</string>
    <string name="BirthdayText">Fecha de nacimiento</string>
    <string name="PhoneNumberText">Teléfono</string>
    <string name="FinishButtonText">Finalizar</string>

    <string name="chatTitle">Chat</string>

    <string name="switchTitle">¿Vendedor?  </string>

    <string name="comienza_a_moverte_por_tu_terreno">Comienza a moverte por tu terreno</string>
    <string name="comenzar">comenzar</string>
    <string name="calcular">calcular</string>
    <string name="titulo">Titulo:</string>
    <string name="humedad">Humedad:</string>
    <string name="Temperatura">Temperatura:</string>
    <string name="ubicaci_n">Ubicación:</string>
    <string name="metraje">Metraje:</string>
    <string name="categorias">Categorias:</string>
    <string name="precio">Precio:</string>
    <string name="actualizar">actualizar</string>
    <string name="subir">subir</string>
    <string name="tus_publicaciones">Tus Publicaciones:</string>

    <string name="enviarMensaje">Enviar Mensaje</string>

    <string name="ElegirUbicacion">Seleccionar ubicación</string>

    <string name="finalizarSubidaPost">Finalizar y subir post</string>


    <string name="home">Home</string>
    <string name="homeDescription">Comienza a buscar tu futuro terreno</string>
    <string name="porUbicacion">Por ubicación</string>
    <string name="porMetraje">Por metraje</string>
    <string name="busqAvanzada">Búsqueda avanzada</string>
    <string name="categoriesText">Categorías</string>
    <string name="settingsText">Ajustes</string>
    <string name="editProfile">Editar perfil</string>
    <string name="terms">Términos y condiciones</string>
    <string name="logout">Cerrar sesión</string>
    <string name="profile">Perfil</string>
    <string name="updateProfile">Actualizar</string>


    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ChooseLocationText">Elige una ubicación</string>
    <string name="SearchButtonText">Buscar</string>
    <string name="ResultsText">Resultados</string>
    <string name="ChooseMentrajeRangeText">Elige un rango del metraje</string>
    <string name="AdvanceText">Búsqueda avanzada</string>
    <string name="CategoryResultText">Resultados de terrenos para la categoría seleccionada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_get_area_map">GetAreaMapActivity</string>
    <string name="title_activity_distance_to_terreno">DistanceToTerrenoActivity</string>
    <string name="title_activity_choose_post_location">ChoosePostLocationActivity</string>

</resources>