<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="#FFFFFF"
    android:paddingTop="20dp"
    tools:context=".ChooseTypeOfUserActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/ChooseUserTypeText"
        android:textColor="@color/MainGray"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sellerButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/usercategorybutton"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/farmer"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/buyerButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/usercategorybutton"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/money"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/BuyerText"
        android:textColor="@color/LightGray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buyerButton"
        app:layout_constraintStart_toStartOf="@+id/buyerButton"
        app:layout_constraintTop_toBottomOf="@+id/buyerButton" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/SellerText"
        android:textColor="@color/LightGray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sellerButton"
        app:layout_constraintStart_toStartOf="@+id/sellerButton"
        app:layout_constraintTop_toBottomOf="@+id/sellerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>